tests/parser/errors/block_comment_no_nesting.mochi
let x = /* outer /* inner */ tail */ 1
